--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,15 @@ blinker==1.9.0
 blis==1.3.3
 catalogue==2.0.10
 certifi==2026.1.4
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 cloudpathlib==0.23.0
 confection==0.1.5
+cryptography==46.0.5
 cymem==2.0.13
+distro==1.9.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 filelock==3.20.3
 Flask==3.1.2
 fsspec==2026.1.0
@@ -20,19 +24,30 @@ huggingface_hub==1.3.5
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.13.0
 joblib==1.5.3
+lxml==6.0.2
 MarkupSafe==3.0.3
 mpmath==1.3.0
 murmurhash==1.0.15
 networkx==3.6.1
 nltk==3.9.2
 numpy==2.4.1
+openai==2.20.0
 packaging==26.0
 pandas==3.0.0
+pdfminer.six==20251230
+pdfplumber==0.11.9
+pillow==12.1.1
 preshed==3.0.12
+pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
+PyPDF2==3.0.1
+pypdfium2==5.4.0
 python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
 PyYAML==6.0.3
 regex==2026.1.15
 requests==2.32.5
@@ -44,6 +59,7 @@ setuptools==80.10.2
 shellingham==1.5.4
 six==1.17.0
 smart_open==7.5.0
+sniffio==1.3.1
 spacy==3.8.11
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
